# stock-pure

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  ruff.toml
.github/: deploy.yml
bench/timesnet/: bench_accuracy_stockpure.py  bench_accuracy_upstream.py  common.py
configs/: default.yaml
results/bench/: timesnet_accuracy_stockpure.json  timesnet_accuracy_stockpure.md  timesnet_accuracy_upstream.json  timesnet_accuracy_upstream.md
results/quickrun/: loss_curve.png.txt  multi_horizon.png.txt  predictions_vs_actual.png.txt  scatter_pred_vs_true.png.txt  test_predictions.csv  timesnet_from_csv.json
scripts/: default_run.py  run_timesnet_bench.py
src/: main.py
src/data/: data_loader.py  read_data.py
src/data/yahoo-finance/: amazon.csv  apple.csv  google.csv  intel.csv  meta.csv  microsoft.csv  nvidia.csv  tesla.csv
src/data/yahoo-finance/splits/apple/: apple_test.csv  apple_train.csv  apple_val.csv
src/models/: ma.py  register.py
src/models/timesnet/: blocks.py  layers.py  ops.py
src/models/timesnet/losses/: composite.py  registry.py  regression.py
src/preprocess/: split_dataset.py
src/scripts/: fetch_yahoo_stock_data.py  train_timesnet_from_csv.py
src/vis/: plots.py
tests/timesnet/: test_blocks_fold_unfold.py  test_fft_top_periods.py
